Mon Jul  4 13:12:12  UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Protocols_Hooks.h:
          Removed several not needed forward declarations

Mon Jul  4 13:07:12  UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Visibility.pidl:
          Don't use -GA with regeneration, we then get an A.cpp with contents
          but the C.cpp file is empty, so just generate everything in C.cpp

        * tao/VisibilityC.{h,cpp}:
        * tao/VisibilityS.h:
          Regenerated

        * tao/VisibilityA.cpp:
          Removed

        * tao/Makefile.am:
        * tao/tao.mpc:
          Removed file above

Mon Jul  4 12:59:12  UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PredefinedType_Seq_Tmplinst.cpp:
          Removed this file, explicit templates are not working with TAO
          and will not work anymore in the future

        * tao/Makefile.am:
        * tao/tao.mpc:
          Removed file above

Mon Jul  4 12:05:12  UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FaultTolerance/FT_ClientService_Activate.h:
        * orbsvcs/orbsvcs/FaultTolerance/FT_ServerService_Activate.h:
        * orbsvcs/orbsvcs/PortableGroup/MIOP.h:
        * orbsvcs/orbsvcs/PortableGroup/PortableGroup_Loader.h:
        * tao/PICurrent_Loader.h:
        * tao/BiDir_GIOP/BiDirGIOP.h:
        * tao/CodecFactory/CodecFactory.h:
        * tao/DynamicAny/DynamicAny.h:
        * tao/DynamicInterface/Dynamic_Adapter_Impl.h:
        * tao/IFR_Client/IFR_Client_Adapter_Impl.h:
        * tao/IORInterceptor/IORInterceptor_Adapter_Factory_Impl.h:
        * tao/IORManipulation/IORManip_Loader.h:
        * tao/IORTable/IORTable.h:
        * tao/ImR_Client/ImR_Client.h:
        * tao/Messaging/Messaging.h:
        * tao/ObjRefTemplate/ORT_Adapter_Factory_Impl.h:
        * tao/PI/PI.h:
        * tao/PI/PolicyFactory_Loader.h:
        * tao/PI_Server/PI_Server.h:
        * tao/PortableServer/PortableServer.h: