@@ -1,6 +1,24 @@
 // -*- IDL -*-
 
-// $Id$
+// ================================================================
+/**
+ *  @file   orb_types.pidl
+ *
+ * $Id$
+ *
+ *   This file was used to generate the code in orb_typesC.* The command
+ *   used to generate code is:
+ *
+ *     tao_idl
+ *        -o orig -SS -Ge 1 -Sc -Sci
+ *          -Wb,export_macro=TAO_Export
+ *          -Wb,export_include="tao/TAO_Export.h"
+ *          -Wb,pre_include="ace/pre.h"
+ *          -Wb,post_include="ace/post.h"
+ *          orb_types.pidl
+ */
+// ================================================================
+// -*- IDL -*-
 
 // Basic types
 
