@@ -31,6 +31,10 @@
 
 #include "orb_typesC.h"
 #include "tao/CDR.h"
+#include "tao/Null_RefCount_Policy.h"
+#include "tao/TypeCode_Constants.h"
+#include "tao/Alias_TypeCode_Static.h"
+#include "tao/String_TypeCode_Static.h"
 
 #if defined (__BORLANDC__)
 #pragma option -w-rvl -w-rch -w-ccc -w-aus -w-sig
@@ -43,4 +47,84 @@
 namespace TAO
 {
 }
+
+
+// TAO_IDL - Generated from
+// be\be_visitor_typecode/alias_typecode.cpp:50
+
+static TAO::TypeCode::Alias<char const *,
+                            CORBA::TypeCode_ptr const *,
+                            TAO::Null_RefCount_Policy>
+  _tao_tc_CORBA_ORBid (
+    CORBA::tk_alias,
+    "IDL:omg.org/CORBA/ORBid:1.0",
+    "ORBid",
+    &CORBA::_tc_string);
+  
+namespace CORBA
+{
+  ::CORBA::TypeCode_ptr const _tc_ORBid =
+    &_tao_tc_CORBA_ORBid;
+}
+
+
+
+// TAO_IDL - Generated from
+// be\be_visitor_typecode/alias_typecode.cpp:50
+
+static TAO::TypeCode::Alias<char const *,
+                            CORBA::TypeCode_ptr const *,
+                            TAO::Null_RefCount_Policy>
+  _tao_tc_CORBA_Flags (
+    CORBA::tk_alias,
+    "IDL:omg.org/CORBA/Flags:1.0",
+    "Flags",
+    &CORBA::_tc_ulong);
+  
+namespace CORBA
+{
+  ::CORBA::TypeCode_ptr const _tc_Flags =
+    &_tao_tc_CORBA_Flags;
+}
+
+
+
+// TAO_IDL - Generated from
+// be\be_visitor_typecode/alias_typecode.cpp:50
+
+static TAO::TypeCode::Alias<char const *,
+                            CORBA::TypeCode_ptr const *,
+                            TAO::Null_RefCount_Policy>
+  _tao_tc_CORBA_Identifier (
+    CORBA::tk_alias,
+    "IDL:omg.org/CORBA/Identifier:1.0",
+    "Identifier",
+    &CORBA::_tc_string);
+  
+namespace CORBA
+{
+  ::CORBA::TypeCode_ptr const _tc_Identifier =
+    &_tao_tc_CORBA_Identifier;
+}
+
+
+
+// TAO_IDL - Generated from
+// be\be_visitor_typecode/alias_typecode.cpp:50
+
+static TAO::TypeCode::Alias<char const *,
+                            CORBA::TypeCode_ptr const *,
+                            TAO::Null_RefCount_Policy>
+  _tao_tc_CORBA_RepositoryId (
+    CORBA::tk_alias,
+    "IDL:omg.org/CORBA/RepositoryId:1.0",
+    "RepositoryId",
+    &CORBA::_tc_string);
+  
+namespace CORBA
+{
+  ::CORBA::TypeCode_ptr const _tc_RepositoryId =
+    &_tao_tc_CORBA_RepositoryId;
+}
+
 
